styles/layout.css
* {
  padding: 0;
  margin: 0;
}

body {
  margin: 1em 3%;
  /* background-image: url(../images/background.gif); */
  background-attachment: fixed;
  background-position: top left;
  background-repeat: repeat-x;
  max-width: none;
}
#header {
  background-repeat: no-repeat;
  background-position: bottom right;
  border-width: 0em;
  border-style: solid;
  border-bottom-width: 0;
  text-align: center;
}
#header >p {
  padding: 2em 10%;
}


#navigation {
  background-image: url(../images/navbar.gif);
  background-position: bottom left;
  background-repeat: repeat-x;
  border-width: .1em;
  border-style: solid;
  border-bottom-width: 0;
  border-top-width: 0;
  padding-left: 10%;
}
#navigation ul {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(4, minmax(0, 1fr));
  gap: .5em;
  padding: .4em .5em .6em 0;
  border-left-width: .1em;
  border-left-style: solid;
}
#navigation li {
  display: block;
  list-style: none;
}
#navigation li.nav-primary {
  grid-column: span 2;
}
#navigation li.nav-secondary {
  grid-column: span 1;
}

#navigation li a,
#navigation li span.nav-disabled {
  display: block;
  padding: .55em 1.2em;
  border-right: .1em solid;
  border-radius: .6em;
  text-align: center;
  line-height: 1.2;
  white-space: nowrap;
}
#navigation li span.nav-disabled {
  cursor: default;
}
#content {
  border-width: .1em;
  border-style: solid;
  border-top-width: 0;
  padding: 2em 10%;
  line-height: 1.8em;
  text-align: center;
}

#content table {
  width: 100%;
  table-layout: fixed;
  border-collapse: collapse;
}

#content #item1 {
  text-align: left;
}
#content label {
  display: inline;
}
#content img {
  border-width: .1em;
  border-style: solid;
  outline-width: .1em;
  outline-style: solid;
}
#imagegallery li {
  display: inline;
}
#slideshow {
  width: 150px;
  height: 150px;
  position: relative;
  overflow: hidden;
}

#ip_conf, #driver_conf {
  padding-left: 2em;
  border:1px solid #eeeeee;
  text-align: left;
  margin-bottom: .3em;
}
#conf_title {
  background-color:  #e6e7f8;;
  margin: 0;
  padding: 2px;
  text-align: center;
}

#ip_button {
  text-align: right;
  padding-right: 2em;
}

img#frame {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 99;
  border-width: 0;
  outline-width: 0;
}
img#preview {
  position: absolute;
  border-width: 0;
  outline-width: 0;
}
dl {
  overflow: hidden;
}
dt {
  float: left;
}
dd {
  float: left;
}
label {
  display: block;
}
fieldset {
  border: 0;
}
td {
/*  padding: .5em 3em;*/
  width: 25%;
  padding: .5em 1em 0em 0em;
  vertical-align: top;
  overflow-wrap: anywhere;
}

@media (max-width: 520px) {
  body {
    margin: .75em 2%;
  }

  #header > p {
    padding: 1.2em 6%;
  }

  #navigation {
    padding-left: 4%;
  }

  #navigation ul {
    grid-template-columns: repeat(2, minmax(0, 1fr));
    gap: .4em;
    padding: .35em .4em .5em 0;
  }

  #navigation li.nav-primary {
    grid-column: span 1;
  }

  #navigation li.nav-secondary {
    grid-column: span 1;
  }

  #navigation li a,
  #navigation li span.nav-disabled {
    padding: .55em .7em;
    border-right-width: 0;
  }

  #content {
    padding: 1.2em 5%;
  }

  td {
    width: auto;
    padding: .4em .4em 0 0;
  }
}

